# BoxingHub

./: Dockerfile  LICENSE.md  Pipfile  README.md  boxinghub.db  pyproject.toml  requirements.txt  test.py
AI-BoxingHub/: Pipfile  README.md  boxinghub.db  manage.py  requirements.txt
AI-BoxingHub/aws_llms/: apps.py  urls.py  views.py
AI-BoxingHub/boxinghub/: asgi.py  settings.py  urls.py
AI-BoxingHub/chatbot/: bot copy.py  bot-shopify.py  views.py
AI-BoxingHub/computer_vision/: apps.py  urls.py  views.py
AI-BoxingHub/main/: models.py  urls.py  utils.py  views.py
AI-BoxingHub/nlp_app/: apps.py  forms.py  speech_transcription_diarization.py  urls.py  views.py
AI-BoxingHub/templates/: accessibility.html  aws_llms.html  base.html  clubs.html  computer-vision.html  fundamentals.html  gears.html  index.html  moments.html  recovery.html  rules.html
back-up/flask-old/: README.md  requirements.txt
back-up/google-cloud/: clubs.html  gears.html  index.html  moments.html  recovery.html  rules.html  (+1 more)
boxerstats/: apps.py  models.py  serializers.py  urls.py  views.py
boxinghub/: settings.py  urls.py  wsgi.py
chatbot/: bot.py
computer_vision/: urls.py  views.py
frontend/: package-lock.json  package.json
google cloud/: clubs.html  gears.html  index.html  memory.html  moments.html  recovery.html  rules.html  techniques-back-up.html  techniques.html
main/: urls.py  views.py
templates/: accessibility.html  base.html  clubs.html  computer-vision.html  fundamentals.html  gears.html  index.html  memory.html  moments.html  recovery.html  rules.html  techniques.html
(+50 files in other folders)
